# eztexteditor

./: .gitignore  README.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
.github/workflows/: deploy.yml
dist-single/: index.html
js/: libs.js  test_webrtc.js  test_yjs.js  webrtc-4.js  yjs-12.js
legacy/: index.html  package.json
legacy_backup/: jest.config.js  package-lock.json
legacy_backup/tests/: functionality.test.js
src/: App.jsx  App.tsx  index.css  main.js  store.ts  wasm-bridge.js
src/components/: Editor.tsx  Header.jsx  Header.tsx  PanicOverlay.jsx  Preview.tsx  Sidebar.tsx
src/components/Editor/: Editor.jsx
src/components/Modals/: GraphModal.jsx  InfoModal.jsx  Modals.jsx  SearchModal.jsx  SecuritySettingsModal.jsx  ShareModal.jsx
src/components/Sidebar/: Sidebar.jsx  SortableSidebarItem.jsx
src/components/editor/: EditorArea.tsx  LineNumbers.tsx  PreviewPane.tsx
src/hooks/: useAppState.js  useAppState.test.js  usePersistence.ts  useShortcuts.ts  useSidebarResize.ts
src/routes/: StoreSync.tsx
src/store/: types.ts  useAppStore.ts
src/styles/: legacy.css
src/types/: index.ts
src/utils/: crypto.ts  persistence.js  tabs.ts  tutorial.js
start_backup/: README.md  index.html
start_backup/tests/: basic.test.js  extended.test.js  jest.setup.js  uniqueness.test.js
tests/: collaboration.test.js  functionality.test.js  jest.setup.cjs  jest.setup.js  navigation.test.js  rendering.test.js  security.test.js  ui.test.js
wasm-core/: Cargo.toml
wasm-core/src/: lib.rs
(+7 files in other folders)
