[package]
name = "eztexteditor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
pulldown-cmark = { version = "0.12", features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "=0.3.77"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
